--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
   </div>
 </div>
 
+<div class="page-body">
   <% if notice %>
     <div class="ui positive message">
       <i class="close icon"></i>
@@ -51,11 +52,15 @@
     </div>
   </div>
   <% end %>
+</div>
 
 <%= yield %>
 
 <script charset="utf-8">
   $('.ui.dropdown').dropdown();
+  $('.message .close').on('click', function() {
+  $(this).closest('.message').fadeOut();
+});
 </script>
 </body>
 </html>
