--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class= "alert alert-danger col-md-offset-2">
+  <div id="error_explanation">
     <h2><%= pluralize(object.errors.count, "error") %> prohibited this <%= "#{(object.class).to_s.downcase}" %> from being saved:</h2>
     <ul>
       <% object.errors.full_messages.each do |message| %>
