--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,8 +1,6 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="ui error message">
-    <div class="header">
-      <h2><%= pluralize(object.errors.count, "error") %> prohibited this <%= "#{(object.class).to_s.downcase}" %> from being saved:</h2>
-    </div>
+  <div id="error_explanation">
+    <h2><%= pluralize(object.errors.count, "error") %> prohibited this <%= "#{(object.class).to_s.downcase}" %> from being saved:</h2>
     <ul>
       <% object.errors.full_messages.each do |message| %>
       <li><%= message %> </li>
