--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
         <div class="meta">
           Adoring Human: <%= link_to dog.user.full_name, user_path(dog.user), class: "group" %>
         </div>
-        <div class="description" data-dog-id=<%="#{dog.id}"%>><%= dog.bio %>...<span><strong>more</strong></span>
+        <div class="description" data-dog-id=<%="#{dog.id}"%>><%= dog.bio %>...<span id="more-link">more</span>
           <div class="inactive" id="more-info">
             <ul>
               <li><strong>Breed: </strong> <%= dog.breed %> </li>
