--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
   <div class="column">
     <% column_dogs.each do |dog| %>
     <% break if dog.nil? %>
-    <div class="ui fluid card">
+    <div class="ui fluid index card">
       <div class="image dimmable">
         <div class="ui dimmer">
           <div class="content">
@@ -29,10 +29,10 @@
         </div>
         <%= image_tag(dog.avatar) %>
       </div>
-      <div class="content" data= "">
+      <div class="content info" data= "">
         <div class="header"><%= dog.name %></div>
         <div class="meta">
-          Adoring Human: <%= link_to dog.user.full_name, user_path(dog.user), class: "group" %>
+          Adoring Human: <%= dog.user.full_name %>
         </div>
         <div class="description" data-dog-id=<%="#{dog.id}"%>><%= dog.bio %>...<span id="more-link">more</span>
           <div class="inactive" id="more-info">
@@ -53,7 +53,7 @@
           <%= image_tag(dog.user.avatar) %>
         </div>
         <% if current_user %>
-          <%= dog.user.full_name  %> <%= link_to 'Message me!', conversations_path(sender_id: current_user.id, recipient_id: dog.user.id), id: "message-user-#{dog.user.id}", method: 'post'%>
+          <%= link_to dog.user.user_name, user_path(dog.user) %> <%= link_to 'Message me!', conversations_path(sender_id: current_user.id, recipient_id: dog.user.id), id: "message-user-#{dog.user.id}", method: 'post'%>
         <% end %>
       </div>
     </div>
