unread message notification now links to that message

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-body">
   <h2>Doggies Near You<i class="paw icon"></i></h2>
   <% if @dogs == [] %>
-    No dogs are currently registerred in your area :(
+    There are no dogs currently registered in your area :(
   <% end %>
   <div class="ui segment">
     <div class="ui form">
