--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -88,6 +88,9 @@
      <div class="ui segment" id = "map-container">
        <h3 class="ui dividing header">Parks between you and <%= recipient.first_name %></h3>
        <div id="mapbox_map" data-userlatitude=<%= current_user.latitude %> data-userlongitude=<%= current_user.longitude %> data-otherlatitude=<%= recipient.latitude %> data-otherlongitude=<%= recipient.longitude %>>
+         <div class="ui active inverted dimmer">
+          <div class="ui text loader">Loading</div>
+        </div>
        </div>
      </div>
    </div>
