--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,4 @@
-<div class="ui grid page-body">
+<div class="ui two column stackable grid page-body">
   <div class="five wide column">
     <div class="ui segment">
       <a class="ui ribbon label"><%= current_user.full_name %></a>
@@ -51,6 +51,7 @@
         <%= link_to "Add Dog", new_dog_path, id: "add-dog-action", class: "ui button teal"  %>
       </div>
     </div>
+  </div>
   </div>
   <div class="eleven wide column">
     <div class="ui segment">
