--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="ui two column grid page-body">
+<div class="ui stackable two column grid page-body">
   <div class="five wide column">
     <div class="ui segment">
       <a class="ui ribbon label"><%= @user.full_name %></a>
