--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,3 @@
-<%= current_user.latitude %>
-<%= current_user.longitude %>
 <div class="ui grid" id="inbox">
   <div class="row">
     <div class="four wide column">
@@ -88,7 +86,7 @@
     </div>
     <div class="six wide column">
      <div class="ui segment" id = "map-container">
-       <h3 class="ui dividing header">Parks between you and <%= recipient.first_name %></h3>
+       <h3 class="ui dividing header">Dog parks between you and <%= recipient.first_name %></h3>
        <div id="mapbox_map" data-userlatitude=<%= current_user.latitude %> data-userlongitude=<%= current_user.longitude %> data-otherlatitude=<%= recipient.latitude %> data-otherlongitude=<%= recipient.longitude %>>
          <div class="ui active inverted dimmer" >
           <div class="ui text loader">Loading</div>
