--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -10,55 +10,6 @@
       <div class="active section">Pup's Preferences</div>
     </div>
   </div>
-  <div class="ui segment">
-    <p>Suggested Playmates:</p>
-    <% @dogs.each do |dog| %>
-    <div id="dog-table" class="ui three column padded page grid">
-      <div class="column">
-        <div class="ui fluid card">
-          <div class="image dimmable">
-            <div class="ui dimmer">
-              <div class="content">
-                <div class="center">
-                  <div class="ui inverted button">Add Friend</div>
-                </div>
-              </div>
-            </div>
-            <%= image_tag(dog.avatar) %>
-          </div>
-          <div class="content" data= "">
-            <div class="header"><%= dog.name %></div>
-            <div class="meta">
-              Adoring Human: <%= link_to dog.user.full_name, user_path(dog.user), class: "group" %>
-            </div>
-            <div class="description" data-dog-id=<%="#{dog.id}"%>><%= dog.bio %>...<span><strong>more</strong></span>
-              <div class="inactive" id="more-info">
-                <ul>
-                  <li><strong>Breed: </strong> <%= dog.breed %> </li>
-                  <li><strong>Age: </strong> <%= dog.age %></li>
-                  <li><strong>Gender: </strong><%= dog.gender %></li>
-                  <li><strong>Size: </strong><%= dog.size %></li>
-                  <li><strong>Play: </strong><%= dog.play %></li>
-                  <li><strong>Personality: </strong><%= dog.personality %></li>
-                </ul>
-              </div>
-            </div>
-
-          </div>
-          <div class="extra content">
-            <div class="ui avatar image">
-              <%= image_tag(dog.user.avatar) %>
-            </div>
-            <% if current_user %>
-              <%= dog.user.full_name  %> <%= link_to 'Message me!', conversations_path(sender_id: current_user.id, recipient_id: dog.user.id), method: 'post'%>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-    <% end %>
-  </div>
-
   <h4>Dog Preferences</h4>
   <div class="ui segment">
     <table class="ui table">
@@ -156,7 +107,7 @@
                 <input id="new-gender" name="filter[content]" type="hidden">
                 <div class="menu">
                   <% Size.options.each do |opt| %>
-                  <div class="item" data-value=<%="opt"%>><%= opt %></div>
+                  <div class="item" data-value=<%= opt %>><%= opt %></div>
                   <% end %>
                 </div>
               </div>
@@ -195,4 +146,55 @@
     </div>
   </div>
 
+  <div class="ui segment">
+    <h2 class="center aligned ui header">Suggested Playmates</h2>
+    <div id="dog-table" class="ui three column padded page grid">
+      <% @dogs.in_groups(3) do |column_dogs| %>
+      <div class="column">
+        <% column_dogs.each do |dog| %>
+        <% break if dog.nil? %>
+        <div class="ui fluid card">
+          <div class="image dimmable">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button">Add Friend</div>
+                </div>
+              </div>
+            </div>
+            <%= image_tag(dog.avatar) %>
+          </div>
+          <div class="content" data= "">
+            <div class="header"><%= dog.name %></div>
+            <div class="meta">
+              Adoring Human: <%= link_to dog.user.full_name, user_path(dog.user), class: "group" %>
+            </div>
+            <div class="description" data-dog-id=<%="#{dog.id}"%>><%= dog.bio %>...<span><strong>more</strong></span>
+              <div class="inactive" id="more-info">
+                <ul>
+                  <li><strong>Breed: </strong> <%= dog.breed %> </li>
+                  <li><strong>Age: </strong> <%= dog.age %></li>
+                  <li><strong>Gender: </strong><%= dog.gender %></li>
+                  <li><strong>Size: </strong><%= dog.size %></li>
+                  <li><strong>Play: </strong><%= dog.play %></li>
+                  <li><strong>Personality: </strong><%= dog.personality %></li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+          <div class="extra content">
+            <div class="ui avatar image">
+              <%= image_tag(dog.user.avatar) %>
+            </div>
+            <% if current_user %>
+              <%= dog.user.full_name  %> <%= link_to 'Message me!', conversations_path(sender_id: current_user.id, recipient_id: dog.user.id), method: 'post'%>
+            <% end %>
+          </div>
+        </div>
+        <% end %>
+      </div>
+      <% end %>
+    </div>
+  </div>
 </div>
