--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,7 +4,7 @@
       <div class="ui segment">
         <div class="ui medium divided animated list">
           <div class="header">
-            <h3>Inbox</h3>
+            <h3 class="ui center aligned header">Inbox</h3>
           </div>
           <% if @latest_messages == [] %>
             No messages yet!  <%= link_to 'Find Doggies in your area!', dogs_path %>
