--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,12 @@
 <div class="ui inverted vertical image-div">
     <div class="ui page grid">
       <div class="column">
-        <h2 class="ui inverted header header-text">
+        <h2 class="ui deep-navy header header-text">
           PuppyLove because every dog needs a friend...
         </h2>
-          <%= link_to "Sign Up", signup_path, class:"ui huge button deep-navy-background header-button", id:"top-signup-button"%>
+        <% if !current_user %>
+          <%= link_to "Sign Up", signup_path, class:"ui huge button inverted deep-navy header-button", id:"top-signup-button"%>
+        <% end %>
       </div>
     </div>
   </div>
@@ -13,7 +15,7 @@
 
 <div id="dog-table" class="ui three column padded page grid">
   <h2 class="ui header page-header center aligned">Dogs</h2>
-  <div class="ui horizontal divider">currently on PuppyLove</div>
+  <div class="ui horizontal divider">currently on Puppy Play Date</div>
   <% @dogs[0..5].in_groups(3) do |column_dogs| %>
   <div class="column">
     <% column_dogs.each do |dog| %>
@@ -60,32 +62,4 @@
     <% end %>
   </div>
   <% end %>
-</div>
-
-
-<div class="ui inverted content-div">
-    <div class="ui two column grid">
-      <div class="column welcome-panel-left">
-        <div class="ui inverted header vertically aligned">
-          <h2>PuppyLove<i class="paw icon large inverted"></i></h2>
-        </div>
-        <div class="ui content light-gray">
-          <p class="panel-text">A new platform to connect your pets with playmates nearby.
-            Through our extensive research, we've developed an algorithm
-            to help match your pup with an appropriate playmate</p>
-        </div>
-        <%= link_to "Sign Up", signup_path, class:"ui button inverted"%>
-      </div>
-      <div class="column welcome-panel-right">
-        <div class="ui header inverted right aligned">
-          <h4>About Us</h4>
-          <h4>Contact Us</h4>
-          <h4>Careers</h4>
-          <h4>Privacy Policy</h4>
-        </div>
-      </div>
-    </div>
-    <div class="content footer-text">
-      <p class="light-gray">An App created by Dana Mulder and Rory Grant</p>
-    </div>
 </div>
