--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,14 +44,16 @@
  }
 
  .content-div {
-   background: $deep-navy no-repeat center center fixed;
+   background: $deep-navy no-repeat center center fixed !important;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    width: 100%;
-   height: 300px;
+   height: 150px;
    margin-top: 2em !important;
+   margin-bottom: 0em !important;
+   text-align: center !important;
  }
 
  .inactive {
@@ -114,7 +116,15 @@ a:hover, .button:hover {
 
 .inverted.button.deep-navy {
   color: $deep-navy !important;
-  box-shadow: 0px 0px 0px 2px $deep-navy inset !important;
+  box-shadow: 0px 0px 0px 3px $deep-navy inset !important;
+  background-color: none !important;
+}
+
+.inverted.button.deep-navy:hover {
+  color: $primary-green !important;
+  box-shadow: 0px 0px 0px 3px $deep-navy inset !important;
+  background-color: $deep-navy !important;
+
 }
 
 .inverted.button.dark-gray {
@@ -140,15 +150,7 @@ a:hover, .button:hover {
   margin: 2em 0em 0em 30em !important;
   text-align: right;
   position: relative;
-}
-
-.welcome-panel-left {
-  padding-left: 4em !important;
-}
-
-.welcome-panel-right {
-  padding-right: 4em !important;
-  float: right;
+  color: $deep-navy !important;
 }
 
 .panel-text {
