--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -164,7 +164,7 @@
             </div>
             <%= image_tag(dog.avatar) %>
           </div>
-          <div class="content" data= "">
+          <div class="content info dog" data= "">
             <div class="header"><%= dog.name %></div>
             <div class="meta">
               Adoring Human: <%= link_to dog.user.full_name, user_path(dog.user), class: "group" %>
@@ -188,7 +188,7 @@
               <%= image_tag(dog.user.avatar) %>
             </div>
             <% if current_user %>
-              <%= dog.user.full_name  %> <%= link_to 'Message me!', conversations_path(sender_id: current_user.id, recipient_id: dog.user.id), method: 'post'%>
+              <%= link_to dog.user.full_name, user_path(dog.user)  %> | <%= link_to 'Message me!', conversations_path(sender_id: current_user.id, recipient_id: dog.user.id), method: 'post'%>
             <% end %>
           </div>
         </div>
