--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -17,7 +17,6 @@
         <tr>
           <th>Preference</th>
           <th></th>
-          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -27,11 +26,9 @@
             <% if filter.type == "Zipcode" %>
               <td>Based on <%= filter.type %>: <%= filter.content %></td>
               <td><%= link_to "Edit Location", edit_filter_path(filter), id: "edit-filter-#{filter.id}" %></td>
-              <td></td>
             <% elsif filter.type == "BlockedUser" %>
             <% else %>
               <td><%= filter.type %> Preference: <%= filter.content %></td>
-              <td><%= link_to "Edit Preference", edit_filter_path(filter), id: "edit-filter-#{filter.id}" %></td>
               <td><%= link_to "Delete Preference", filter_path(filter.id), method: :delete, data: {confirm: "Are you sure you want to delete this preference?"}, id: "delete-filter-#{filter.id}-action" %></td>
             <% end %>
           <% end %>
@@ -41,7 +38,6 @@
           <tr>
             <td>Blocked User: <%= (blocked_hash[:user]).user_name %></td>
             <td><%= link_to "Unblock User", filter_path(blocked_hash[:filter_id]), method: :delete, data: {confirm: "Are you sure you want to unblock this user?"}, id: "unblock-user-#{blocked_hash[:name]}-action" %></td>
-            <td></td>
           </tr>
         <% end %>
       </tbody>
@@ -49,7 +45,7 @@
   </div>
 
   <h4 class = "header">Add Preferences</h4>
-  <div class="ui sixteen wide  two column segment page grid">
+  <div class="ui sixteen wide  two column segment stackable page grid">
     <div class="row">
       <div class="eight wide column">
         <div class="ui form segment">
@@ -148,7 +144,7 @@
 
   <div class="ui segment">
     <h2 class="center aligned ui header">Suggested Playmates</h2>
-    <div id="dog-table" class="ui three column padded page grid">
+    <div id="dog-table" class="ui three column padded stackable page grid">
       <% @dogs.in_groups(3) do |column_dogs| %>
       <div class="column">
         <% column_dogs.each do |dog| %>
