--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="ui grid" id="inbox">
+<div class="ui stackable grid" id="inbox">
   <div class="row">
     <div class="four wide column">
       <div class="ui segment">
