--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -53,7 +53,7 @@
     <div class="ui segment">
       <div class="ui segment">
         <h3 class="ui header center aligned">Potential Playmates</h3>
-        <div class="ui three column grid">
+        <div class="ui three column stackable grid">
           <% @dogs[0..2].each do |dog| %>
             <div class="column">
               <div class="ui fluid card">
@@ -96,7 +96,7 @@
           <table class="ui table">
             <thead>
               <tr>
-                <th>Preference</th>
+                <th>Preferences</th>
                 <th></th>
                 <th></th>
               </tr>
@@ -107,23 +107,34 @@
                 <% if filter.id != nil %>
                   <% if filter.type == "Zipcode" %>
                     <td>Based on <%= filter.type %>: <%= filter.content %></td>
-                    <td><%= link_to "Edit Location", edit_filter_path(filter), id: "edit-filter-#{filter.id}" %></td>
                     <td></td>
                   <% elsif filter.type == "BlockedUser" %>
                   <% else %>
                     <td><%= filter.type %> Preference: <%= filter.content %></td>
-                    <td><%= link_to "Edit Preference", edit_filter_path(filter), id: "edit-filter-#{filter.id}" %></td>
-                    <td><%= link_to "Delete Preference", filter_path(filter.id), method: :delete, data: {confirm: "Are you sure you want to delete this preference?"}, id: "delete-filter-#{filter.id}-action" %></td>
                   <% end %>
                 <% end %>
               </tr>
               <% end %>
-              <% current_user.blocked_users_info.each do |blocked_hash| %>
-                <tr>
-                  <td>Blocked User: <%= (blocked_hash[:user]).user_name %></td>
-                  <td><%= link_to "Unblock User", filter_path(blocked_hash[:filter_id]), method: :delete, data: {confirm: "Are you sure you want to unblock this user?"}, id: "unblock-user-#{blocked_hash[:name]}-action" %></td>
-                  <td></td>
-                </tr>
+            </tbody>
+          </table>
+          <h4>Blocked Users</h4>
+          <table class="ui table">
+            <thead>
+              <tr>
+                <th>
+                  Usernames
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <% if current_user.blocked_users_info %>
+                  <tr>
+                    <td>Blocked Users:
+                      <% current_user.blocked_users_info.each do |blocked_hash| %>
+                        <%= "#{(blocked_hash[:user]).user_name}, "%>
+                      <% end %>
+                    </td>
+                  </tr>
               <% end %>
             </tbody>
           </table>
